--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Mayanklna/webmap-development-project#readme",
   "dependencies": {
+    "beefy": "^2.1.8",
     "body-parser": "^1.19.0",
+    "browserify": "^17.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
