--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app.js:bundle.js"
+    "start": "beefy app.js:bundle.js -p process.env.PORT"
   },
   "repository": {
     "type": "git",
